# TravelMate

./: CMakeLists.txt  LICENSE  a.out  all_tmpl.cpp  config.json  init.sql  main.cpp  make_templates.sh
Fields/: baseField.cpp  baseField.h  byteField.h  charField.cpp  charField.h  integerField.cpp  integerField.h
MODELSPROJECT/: CMakeLists.txt  main.cpp  utils.h
MODELSPROJECT/Fields/: byteField.cpp
MODELSPROJECT/dbManagers/Controllers/: baseController.cpp  baseController.h  userContoller.cpp  userContoller.h
MODELSPROJECT/dbManagers/querySets/: baseQuerySet.cpp  baseQuerySet.h  userQuerySet.cpp  userQuerySet.h
MODELSPROJECT/models/: user.cpp  user.h
data/: tmpl_master.h  tmpl_news.h
managers/: CMakeLists.txt  managers.cpp  managers.h
managers/managers/: manager.cpp  manager.h  userManager.cpp  userManager.h
managers/models/: UserModel.cpp  UserModel.h  tableModel.cpp  tableModels.h  userPrototype.h
managers/models/user/: UserModel.cpp  UserModel.h  userPrototype.h
managers/models/user/cypher/: sha256.cpp  sha256.h
managers/utils/: dbConfig.cpp  dbConfig.h
models/: baseManager.h  basicModel.cpp  basicModel.h  dbConfig.h  user.cpp  user.h
models/user/: UserManager.cpp  UserManager.h  user.cpp  user.h
static/css/: loginform.css  style.css  style1.css
templates/: land.html  master.html  master.tmpl  news.html  news.tmpl
